--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
   "parser": "babel-eslint",
   "extends": "eslint:recommended",
   "rules": {
+    "valid-jsdoc": "error",
     "array-callback-return": "error",
     "no-self-compare": "error",
     "no-template-curly-in-string": "error",
