--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,6 +74,15 @@
     "space-before-function-paren": "off",  // TODO(#69): investigate
     "wrap-iife": "off",  // TODO(#69): investigate
     // Deprecated
+    "require-jsdoc": ["off", {  // TODO(#71): incrementally
+      "require": {
+        "FunctionDeclaration": true,
+        "MethodDefinition": true,
+        "ClassDeclaration": true,
+        "ArrowFunctionExpression": true,
+        "FunctionExpression": true
+      }
+    }],
     "valid-jsdoc": ["error", {
       "prefer": {
         "return": "returns"
