--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
     // Suggestions
     "arrow-body-style": ["error"],
     "camelcase": "error",
-    "capitalized-comments": "off",  // TODO(#68): investigate
+    "capitalized-comments": ["error", "always", {"ignoreConsecutiveComments": true}],
     "class-methods-use-this": "off",  // TODO(#68): investigate
     "consistent-return": "off",  // TODO(#68): investigate
     "curly": "off",  // TODO(#68): investigate
