eslint: Configure `valid-jsdoc` to no longer `requireReturn`.
Also remove all of the `@returns {void}` directives.  Just too noisy.

Issue #71.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -87,7 +87,8 @@
     "valid-jsdoc": ["error", {
       "prefer": {
         "return": "returns"
-      }
+      },
+      "requireReturn": false
     }]
   }
 }
