eslint: Explicitly configure some `require-jsdoc` items.
No resulting changes, just making sure no regressions come along.

Issue #71.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -86,7 +86,16 @@
     }],
     "valid-jsdoc": ["error", {
       "prefer": {
-        "return": "returns"
+        "arg": "param",
+        "argument": "param",
+        "return": "returns",
+        "virtual": "abstract"
+      },
+      "preferType": {
+        "Boolean": "boolean",
+        "Number": "number",
+        "Object": "error",
+        "String": "string"
       },
       "requireReturn": false
     }]
