--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
     "curly": "error",
     "func-names": ["error", "as-needed"],
     "func-style": ["error", "declaration"],
-    "id-length": "off",  // TODO(#68): investigate
+    "id-length": "off",
     "max-classes-per-file": "off",  // TODO(#68): investigate
     "max-depth": "off",  // TODO(#68): investigate
     "max-lines": "off",  // TODO(#68): investigate
