eslint: Explicitly disable `max-classes-per-file`.
Given the nature of userscripts, and that we are currently building
them as self-contained files, multiple classes per file are to be
expected.

Issue #68.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "func-names": ["error", "as-needed"],
     "func-style": ["error", "declaration"],
     "id-length": "off",
-    "max-classes-per-file": "off",  // TODO(#68): investigate
+    "max-classes-per-file": "off",
     "max-depth": "off",  // TODO(#68): investigate
     "max-lines": "off",  // TODO(#68): investigate
     "max-lines-per-function": "off",  // TODO(#68): investigate
