eslint: Enable `max-depth`.
At the moment, this is not triggering anything.

Issue #68.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
     "func-style": ["error", "declaration"],
     "id-length": "off",
     "max-classes-per-file": "off",
-    "max-depth": "off",  // TODO(#68): investigate
+    "max-depth": "error",
     "max-lines": "off",  // TODO(#68): investigate
     "max-lines-per-function": "off",  // TODO(#68): investigate
     "max-params": "off",  // TODO(#68): investigate
