eslint: Explicitly disable `max-lines`.
Given the nature of userscripts, and that we are currently building
them as self-contained files, lots of lines per file are to be
expected.

Issue #68.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     "id-length": "off",
     "max-classes-per-file": "off",
     "max-depth": "error",
-    "max-lines": "off",  // TODO(#68): investigate
+    "max-lines": "off",
     "max-lines-per-function": "off",  // TODO(#68): investigate
     "max-params": "off",  // TODO(#68): investigate
     "max-statements": "off",  // TODO(#68): investigate
