eslint: Explicitly disable `object-shorthand` for now.
Writing some code to resolve one style issue and hitting another.
However, not sure what I think of this one, so holding off.

Issue #68.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,7 @@
     "no-unneeded-ternary": "error",
     "no-unused-expressions": "off",  // TODO(#68): investigate
     "no-warning-comments": "off",  // TODO(#68): investigate
+    "object-shorthand": "off",  // TODO(#68): investigate
     "one-var": "off",  // TODO(#68): investigate
     "prefer-destructuring": "off",  // TODO(#68): investigate
     "prefer-named-capture-group": "off",  // TODO(#68): investigate
