eslint: Enable `no-alert` along with some fix-ups.
Issues #68, #105.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
     "max-params": "error",
     "max-statements": ["error", {"max": 20}, {"ignoreTopLevelFunctions": true}],
     "multiline-comment-style": ["error", "separate-lines"],
-    "no-alert": "off",  // TODO(#68): investigate
+    "no-alert": "error",
     "no-bitwise": "off",  // TODO(#68): investigate
     "no-confusing-arrow": ["error", {"allowParens": true}],
     "no-else-return": "off",  // TODO(#68): investigate
