eslint: Enable `no-empty-function` along with some fix-ups.
Ideally, I would have added a comment like `/* No-op. */` to the
functions, but that triggered another lint issue.  And THAT one could
be addressed if I was using a modern version of eslint.

Issue #68.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,7 @@
     "no-bitwise": ["error", {"int32Hint": true}],
     "no-confusing-arrow": ["error", {"allowParens": true}],
     "no-else-return": "error",
-    "no-empty-function": "off",  // TODO(#68): investigate
+    "no-empty-function": "error",
     "no-invalid-this": "off",  // TODO(#68): investigate
     "no-magic-numbers": "off",  // TODO(#68): investigate
     "no-nested-ternary": "off",
