--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
     "no-else-return": "error",
     "no-empty-function": "error",
     "no-invalid-this": "off",
-    "no-magic-numbers": "off",  // TODO(#68): investigate
+    "no-magic-numbers": ["error", {"ignore": [-1, 0, 1]}],
     "no-nested-ternary": "off",
     "no-param-reassign": "off",  // TODO(#68): investigate
     "no-plusplus": "off",  // TODO(#68): investigate
