--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,7 @@
     "no-empty-function": "error",
     "no-invalid-this": "off",
     "no-magic-numbers": ["error", {"ignore": [-1, 0, 1]}],
-    "no-nested-ternary": "off",
+    "no-nested-ternary": "error",
     "no-param-reassign": "off",  // TODO(#68): investigate
     "no-plusplus": "off",  // TODO(#68): investigate
     "no-shadow": "off",  // TODO(#68): investigate
