eslint: Enable `no-param-reassign`.
Looked into settings {"props": true}, but that flagged a case where
the function modifies the html element passed into it.  There does not
seem to be much difference in something like
`elmenent.classList.add(...)` and `element.class = '...'`, so I do not
see a need to enable that option.

Issue #68.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,7 @@
     "no-invalid-this": "off",
     "no-magic-numbers": ["error", {"ignore": [-1, 0, 1]}],
     "no-nested-ternary": "error",
-    "no-param-reassign": "off",  // TODO(#68): investigate
+    "no-param-reassign": "error",
     "no-plusplus": "off",  // TODO(#68): investigate
     "no-shadow": "off",  // TODO(#68): investigate
     "no-ternary": "off",  // TODO(#68): revisit
