--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,7 @@
     "no-magic-numbers": ["error", {"ignore": [-1, 0, 1]}],
     "no-nested-ternary": "error",
     "no-param-reassign": "error",
-    "no-plusplus": "off",  // TODO(#68): investigate
+    "no-plusplus": "error",
     "no-shadow": "off",  // TODO(#68): investigate
     "no-ternary": "off",  // TODO(#68): revisit
     "no-underscore-dangle": "off",  // TODO(#68): investigate
