--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,7 @@
     "no-param-reassign": "error",
     "no-plusplus": "error",
     "no-shadow": "error",
-    "no-ternary": "off",  // TODO(#68): revisit
+    "no-ternary": "off",
     "no-underscore-dangle": "off",  // TODO(#68): investigate
     "no-unneeded-ternary": "error",
     "no-unused-expressions": "off",  // TODO(#68): investigate
