--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,7 @@
     "no-plusplus": "error",
     "no-shadow": "error",
     "no-ternary": "off",
-    "no-underscore-dangle": "off",  // TODO(#68): investigate
+    "no-underscore-dangle": "off",  // TODO(#68): After Debian upgrade
     "no-unneeded-ternary": "error",
     "no-unused-expressions": "off",  // TODO(#68): investigate
     "no-warning-comments": "off",  // TODO(#68): investigate
