--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,7 @@
     "no-ternary": "off",
     "no-underscore-dangle": "off",  // TODO(#68): After Debian upgrade
     "no-unneeded-ternary": "error",
-    "no-unused-expressions": "off",  // TODO(#68): investigate
+    "no-unused-expressions": "off",  // TODO(#68): After Debian upgrade
     "no-warning-comments": "off",  // TODO(#68): investigate
     "object-shorthand": "off",  // TODO(#68): investigate
     "one-var": "off",  // TODO(#68): investigate
