eslint: Enable and configure `no-warning-comments`.
I believe that TODO and XXX are good in committed code as they point
to known weaknesses to be fix or code that needs special attention.  I
do wish eslint has a postfix decorator as well, so we could enforce a
pattern like `TODO(#\d+)`, but maybe there is a option I have not yet
seen.

Issue #68.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,7 +44,7 @@
     "no-underscore-dangle": "off",  // TODO(#68): After Debian upgrade
     "no-unneeded-ternary": "error",
     "no-unused-expressions": "off",  // TODO(#68): After Debian upgrade
-    "no-warning-comments": "off",  // TODO(#68): investigate
+    "no-warning-comments": ["error", {"terms": ["do not submit", "fixme"]}],
     "object-shorthand": "off",  // TODO(#68): investigate
     "one-var": "off",  // TODO(#68): investigate
     "prefer-destructuring": "off",  // TODO(#68): investigate
