eslint: Enable and configure `one-var`.
Issue #68.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,7 @@
     "no-unused-expressions": "off",  // TODO(#68): After Debian upgrade
     "no-warning-comments": ["error", {"terms": ["do not submit", "fixme"]}],
     "object-shorthand": ["error", "never"],
-    "one-var": "off",  // TODO(#68): investigate
+    "one-var": ["error", "never"],
     "prefer-destructuring": "off",  // TODO(#68): investigate
     "prefer-named-capture-group": "off",  // TODO(#68): investigate
     "prefer-promise-reject-errors": "off",  // TODO(#68): investigate
