--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,7 +47,7 @@
     "no-warning-comments": ["error", {"terms": ["do not submit", "fixme"]}],
     "object-shorthand": ["error", "never"],
     "one-var": ["error", "never"],
-    "prefer-destructuring": "off",  // TODO(#68): investigate
+    "prefer-destructuring": ["off", {"object": true}, {"enforceForRenamedProperties": true}],  // TODO(#113): incrementally
     "prefer-named-capture-group": "off",  // TODO(#68): investigate
     "prefer-promise-reject-errors": "off",  // TODO(#68): investigate
     "quote-props": "off",  // TODO(#68): investigate
