--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,7 +50,7 @@
     "prefer-destructuring": ["off", {"object": true}, {"enforceForRenamedProperties": true}],  // TODO(#113): incrementally
     "prefer-named-capture-group": "error",
     "prefer-promise-reject-errors": "error",
-    "quote-props": "off",  // TODO(#68): investigate
+    "quote-props": ["error", "consistent-as-needed"],
     "require-unicode-regexp": "off",  // TODO(#68): investigate
     "sort-keys": "off",  // TODO(#68): investigate
     "strict": "off",  // TODO(#68): investigate
