--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,7 @@
     "prefer-promise-reject-errors": "error",
     "quote-props": ["error", "consistent-as-needed"],
     "require-unicode-regexp": "error",
-    "sort-keys": "off",  // TODO(#68): investigate
+    "sort-keys": "off",
     "strict": "off",  // TODO(#68): investigate
     "valid-typeof": ["error", {"requireStringLiterals": true}],
     "yoda": "off",  // TODO(#68): investigate
