--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -64,7 +64,7 @@
     "array-element-newline": ["error", "consistent"],
     "arrow-parens": ["error", "as-needed", {"requireForBlockBody": true}],
     "comma-dangle": ["error", "always-multiline"],
-    "dot-location": "off",  // TODO(#69): investigate
+    "dot-location": ["error", "property"],
     "function-paren-newline": "off",  // TODO(#69): investigate
     "indent": "off",  // TODO(#69): investigate
     "lines-between-class-members": "off",  // TODO(#69): investigate
