--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -68,7 +68,7 @@
     "function-paren-newline": "error",
     "indent": ["error", 2],
     "lines-between-class-members": ["error", "always", {"exceptAfterSingleLine": true}],
-    "max-len": "off",  // TODO(#69): investigate
+    "max-len": ["off", {"ignoreUrls": true}],  // TODO(#97): Revisit after.
     "multiline-ternary": "off",  // TODO(#69): investigate
     "newline-per-chained-call": "off",  // TODO(#69): investigate
     "no-extra-parens": "off",  // TODO(#69): investigate
