eslint: Enable and configure `padded-blocks` along with fix-ups.
Issue #69.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,7 +50,7 @@
     "no-extra-parens": ["error", "all", {"nestedBinaryExpressions": false, "enforceForArrowConditionals": false}],
     "no-multi-spaces": ["error", {"ignoreEOLComments": true}],
     "object-property-newline": ["error", {"allowAllPropertiesOnSameLine": true}],
-    "padded-blocks": "off",  // TODO(#69): investigate
+    "padded-blocks": ["error", {"classes": "always"}],
     "quotes": "off",  // TODO(#69): investigate
     "semi": "off",  // TODO(#69): investigate
     "space-before-function-paren": "off",  // TODO(#69): investigate
